--- a/src/perfil.html
+++ b/src/perfil.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Encabezado -->
     <header class="bg-primary text-white text-center py-5">
-        <h1>Daniel Silva</h1>
+        <h1>Elkin Daniel Silva Laiton</h1>
         <p>Soy un entusiasta del aprendizaje continuo y siempre estoy buscando nuevas oportunidades para expandir mis
             conocimientos en el campo de la tecnología. Me encanta estar al día con las últimas tendencias y avances en
             el mundo de la informática y la programación.</p>
