--- a/src/perfil.html
+++ b/src/perfil.html
@@ -15,7 +15,7 @@
         <h1>Elkin Daniel Silva</h1>
         <p>Soy un entusiasta del aprendizaje continuo y siempre estoy buscando nuevas oportunidades para expandir mis
             conocimientos en el campo de la tecnología. Me encanta estar al día con las últimas tendencias y avances en
-            el mundo de la informática y la programación.</p>
+            el mundo de la informática y la programación</p>
     </header>
 
     <!-- Barra de navegación -->
